--- a/MultideckManager/collection/templates/collection/partials/decklists_tab.html
+++ b/MultideckManager/collection/templates/collection/partials/decklists_tab.html
@@ -1,9 +1,10 @@
 <div id="decklists-tab" class="bg-white rounded-lg shadow-md p-6">
   <div class="flex justify-between items-center mb-6">
       <h3 class="text-xl font-medium text-gray-800">Decklists</h3>
-      <button id="new-decklist-btn" class="py-2 px-4 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors duration-200">
-          <i class="fas fa-plus mr-1"></i> New Decklist
-      </button>
+      <a href="{% url 'create_decklist' collection.id %}" id="new-decklist-btn" class="py-2 px-4 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors duration-200">
+        <i class="fas fa-plus mr-1"></i> New Decklist
+      </a>
+    
   </div>
   
   {% if decklists %}
