fixes for decklist import

--- a/MultideckManager/collection/templates/collection/partials/cards_tab.html
+++ b/MultideckManager/collection/templates/collection/partials/cards_tab.html
@@ -1,4 +1,6 @@
 {% load collection_filters %}
+{% include 'collection/partials/edit_collection_modal.html' %}
+{% include 'collection/partials/import_collection_modal.html' %}
 <div id="cards-tab" class="bg-white rounded-lg shadow-md p-6">
   <!-- Search and Stats Row -->
   <div class="flex flex-wrap gap-4 mb-6">
